[package]
name = "pivx_rpc_rs"
version = "0.1.1"
authors = ["Liquid369"]
edition = "2021"
rust-version = "1.63"
license = "MIT"
description = "A Rust library for interacting with PIVX Core via JSON-RPC"
documentation = "https://docs.rs/pivx_rpc_rs"
homepage = "https://github.com/PIVX-Labs/pivx-rpc-rs"
repository = "https://github.com/PIVX-Labs/pivx-rpc-rs"
readme = "README.md"
keywords = ["pivx", "cryptocurrency", "rpc", "blockchain", "json-rpc"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
pivx-throttled-jsonrpc = "0.1"
